# opengl-inverse-kinematics

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
libs/body/include/: arm.h  color.h  limb.h
libs/body/src/: arm.cpp
libs/window/src/: display.cpp
source/: Makefile  arm.cpp  arm.h  color.h  display.cpp  display.h  limb.h  link.h  main.cpp
src/: main.cpp
